--- a/src/main/webapp/WEB-INF/content/public/left-list.jspf
+++ b/src/main/webapp/WEB-INF/content/public/left-list.jspf
@@ -5,7 +5,7 @@
 	<a href="doc/upload" class="list-group-item"> 文档上传 </a>
 	<a href="doc/mydoc-list" class="list-group-item"> 我的文档 </a>
 	<a href="myFork.html" class="list-group-item"> 我的收藏 </a>
-	<a href="admin/sort" class="list-group-item">分类管理</a>
+	<a href="admin/sort-manage" class="list-group-item">分类管理</a>
 	<a href="#" class="list-group-item">首页管理</a>
 	<a href="#" class="list-group-item">用户管理</a>
 </ul>
