--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -156,6 +156,7 @@ a{
 	width: 180px;
 	padding-bottom: 5px;
 	border-bottom: 1px solid #CCCCFF;
+	/*overflow: hidden;*/
 	/*border: 1px solid red;*/
 }
 
