--- a/src/main/webapp/WEB-INF/content/public/footer.jspf
+++ b/src/main/webapp/WEB-INF/content/public/footer.jspf
@@ -12,14 +12,14 @@
 			用户登录<i class="glyphicon glyphicon-remove" onclick="closeNode(this)"></i>
 		</div>
 		<div class="panel-body">
-			<form>
+			<form action="json/login" id="login-form">
 				<div class="form-group">
 					<label for="exampleInputEmail1">用户名</label> <input type="text"
-						class="form-control" id="exampleInputEmail1" placeholder="用户名">
+						class="form-control" id="exampleInputEmail1" placeholder="用户名" name="userId">
 				</div>
 				<div class="form-group">
 					<label for="exampleInputPassword1">密码</label> <input
-						type="password" class="form-control" id="exampleInputPassword1"
+						type="password" class="form-control" id="exampleInputPassword1" name="userPassword"
 						placeholder="密码">
 				</div>
 
